--- a/src/Core/HRManagement.Application/HRManagement.Application.csproj
+++ b/src/Core/HRManagement.Application/HRManagement.Application.csproj
@@ -5,6 +5,10 @@
   <ProjectReference Include="..\HRManagement.Domain\HRManagement.Domain.csproj" />
 </ItemGroup>
 
+<ItemGroup>
+  <PackageReference Include="MediatR" Version="12.3.0" />
+</ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
