--- a/src/Core/HRManagement.Application/HRManagement.Application.csproj
+++ b/src/Core/HRManagement.Application/HRManagement.Application.csproj
@@ -1,12 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-<ItemGroup>
-  <ProjectReference Include="../HRManagement.Domain/HRManagament.Domain.csproj" />
-</ItemGroup>
 
 <ItemGroup>
   <PackageReference Include="AutoMapper" Version="13.0.1" />
   <PackageReference Include="MediatR" Version="12.3.0" />
+  <ProjectReference Include="../HRManagement.Domain/HRManagement.Domain.csproj" />
 </ItemGroup>
 
   <PropertyGroup>
