--- a/src/Core/HRManagement.Application/HRManagement.Application.csproj
+++ b/src/Core/HRManagement.Application/HRManagement.Application.csproj
@@ -3,8 +3,12 @@
 
 <ItemGroup>
   <PackageReference Include="AutoMapper" Version="13.0.1" />
-  <PackageReference Include="MediatR" Version="12.3.0" />
-  <ProjectReference Include="../HRManagement.Domain/HRManagement.Domain.csproj" />
+  <PackageReference Include="MediatR" Version="11.0.0" />
+</ItemGroup>
+
+
+<ItemGroup>
+  <ProjectReference Include="..\HRManagement.Domain\HRManagement.Domain.csproj" />
 </ItemGroup>
 
   <PropertyGroup>
